# confocal

./: .gitignore  pyproject.toml  run_tests.sh
.github/workflows/: tests.yml
src/confocal/: config.py  sources.py
tests/: __init__.py  test_integration.py  test_toml_config.py  test_yaml_config.py
tests/fixtures/: test_config.toml  test_config.yaml
