[project]
name = "confocal"
version = "0.1.3"
description = "Multi-layer configuration management with source tracking"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "pydantic>=2.0.0,<2.12.0",
    "pydantic-settings>=2.0.0,<2.11.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]
[project.optional-dependencies]
dev = [
    "build>=0.10.0",
    "twine>=4.0.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-env>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=confocal",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[project.urls]
Homepage = "https://github.com/joshuafcole/confocal"
Repository = "https://github.com/joshuafcole/confocal"

[tool.hatch.build.targets.wheel]
packages = ["src/confocal"]

[tool.hatch.build.targets.sdist]
only-include = ["src"]
